# www-randomizer

./: .gitignore  README.md  run.sh
randomizer_api/: pyproject.toml
randomizer_api/randomizer_api/: manage.py
randomizer_api/randomizer_api/randomizer/: apps.py  util.py  views.py
randomizer_api/randomizer_api/randomizer_api/: asgi.py  settings.py  urls.py  util.py  wsgi.py
